[ui] Fix vertical alignment for InputField in safari
Safari doesn't support vertical padding for input fields.

--- a/src/client/common/ui/InputField.css
+++ b/src/client/common/ui/InputField.css
@@ -3,12 +3,12 @@
   font-family: 'PT Sans';
   font-size: 16px;
   margin: 0;
-  padding: 1px 9px 0 9px;
-  height: 29px;
+  padding: 0px 9px;
+  height: 30px;
   border: 1px solid #CACACA;
   border-radius: 4px;
   appearance: none;
-  line-height: 1em;
+  line-height: 30px;
 }
 
 .InputField-root::placeholder {
